# bargain-watch-data

./: Interface.ipynb  README.md  requirements.txt  setup.cfg  setup.py
src/bargain_watch_data/: settings.py  utils.py
src/bargain_watch_data/image_search/: __init__.py  annotator.py  consts.py  controller.py  dataset.py  models.py  scraper.py
src/bargain_watch_data/item_page/: __init__.py  annotator.py  consts.py  controller.py  dataset.py  models.py  scraper.py  utils.py
