[metadata]
name =bargain-watch-data
version = 0.0.1
author = Wojciech Włodarczyk
author_email = wlodarczyk.woj@example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

